# django_portfolio

./: docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
site_config/: asgi.py  settings.py  urls.py  wsgi.py
