[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Seth Mcfeeters <seth.mcfeeters@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
djangorestframework = "^3.12.2"
simplejwt = "^2.0.1"
psycopg2-binary = "^2.8.6"
djangorestframework-simplejwt = "^4.6.0"
django-cors-headers = "^3.6.0"
django-environ = "^0.4.5"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
